fixed footer spacing

--- a/tcb/assets/sass/custom.scss
+++ b/tcb/assets/sass/custom.scss
@@ -170,7 +170,7 @@ dark-mode-toggle {
                 &.cc-logo {
                     height: 30px;
                     width: 30px;
-                    vertical-align: text-bottom;
+                    vertical-align: middle;
                 }
             }
 
